tests/reject/tinc.nim
discard """
  file: "tinc.nim"
  line: 8
  errormsg: "for a \'var\' type a variable needs to be passed"
"""
var x = 0

inc(x+1)




